Cloudformation/slapd-on-ec2.yml
# Yml file that builds the following AWS resources
# |Resource|Number|
# |---|---|
# |EC2|1|
# |Security Group|1|

Parameters:
# EC2
  AmiId:
    Description: Input an ami-id. Default is the latest AmazonLinux2 of quick start.
    Type: AWS::SSM::Parameter::Value<String>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
  InstanceType:
    Description: Input an Instance type.
    Type: String
    Default: t3.micro
  KeyPair:
    Description: Input your key pair.
    Type: "AWS::EC2::KeyPair::KeyName"
  InstanceName:
    Description: Input a instance name. Do not change as much as possible.
    Type: String
    Default: test
  SubnetId:
    Description: Input a SubnetId. Do not change as much as possible.
    Type: AWS::EC2::Subnet::Id
# SG
  VpcId:
    Description: Input a handson name. Do not change as much as possible.
    Type: AWS::EC2::VPC::Id
  InboundIp:
    Description: Input a IP Address you want to access from. e.g. 0.0.0.0/0
    Type: String
    Default: "103.4.10.234/32"


Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: EC2
        Parameters: 
          - AmiId
          - SubnetId
          - InstanceType
          - KeyPair
          - InstanceName
      -
        Label:
          default: SG
        Parameters: 
          - VpcId
          - InboundIp

Resources:
# EC2
  MyInstance:
    Type: AWS::EC2::Instance
    Properties: 
      EbsOptimized: true
      DisableApiTermination: false
      InstanceInitiatedShutdownBehavior: stop
      Monitoring: false
      Tenancy: default
      ImageId: !Ref AmiId
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyPair
      BlockDeviceMappings: 
        - DeviceName: /dev/xvda
          Ebs: 
            VolumeSize: 8
            VolumeType: gp3
            Iops: 3000
            DeleteOnTermination: true
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeleteOnTermination: true
          GroupSet: 
            - !Ref MySG
          DeviceIndex: 0
          SubnetId: !Ref SubnetId
      Tags: 
        - Key: Name
          Value: !Sub ${InstanceName}
      # UserData: String

# SG
  MySG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      VpcId: !Ref VpcId
      GroupDescription: !Sub Security Group attached to ${InstanceName}
      GroupName: !Sub sg_${InstanceName}
      SecurityGroupIngress:
        -   CidrIp: !Ref InboundIp
            Description: SSH port
            FromPort: 22
            IpProtocol: tcp
            # SourceSecurityGroupId: String
            # SourceSecurityGroupName: String
            ToPort: 22
        -   CidrIp: !Ref InboundIp
            Description: HTTP port
            FromPort: 80
            IpProtocol: tcp
            # SourceSecurityGroupId: String
            # SourceSecurityGroupName: String
            ToPort: 80
        -   CidrIp: 0.0.0.0/0
            Description: LDAP port
            FromPort: 389
            IpProtocol: tcp
            # SourceSecurityGroupId: String
            # SourceSecurityGroupName: String
            ToPort: 389
